Line trace and debug line

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <canvas id = "canvas" width = "1080" height = "720">
       Your browser doesn't support HTML5 canvases. Try updating or downloading the latest version of Google Chrome or Brave.
     </canvas>
-    <script src = "Engine/jQuery.js"></script>
-    <script src = "Engine/game.js" type = "module"></script>
+    <script src = "./Engine/jQuery.js"></script>
+    <script src = "./Engine/index.js" type = "module"></script>
   </body>
 </html>
